fix(accordions): fix issue #51 add a security spacing around the arrow for header link

--- a/scss/_o-accordion.scss
+++ b/scss/_o-accordion.scss
@@ -31,7 +31,7 @@
     a {
       position: relative;
       display: block;
-      padding: 1.0625rem 0;
+      padding: 1.0625rem 2.125rem 1.0625rem 0;
 
       &::after {
         position: absolute;
